welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:22: error: expected class or object definition
def faireMotif(){
^PictureMono2:32: error: expected class or object definition
def marquerSol(){
^PictureMono2:37: error: expected class or object definition
def faireV(){
^PictureMono2:50: error: Unmatched closing brace '}' ignored here
}
^